FileMetaDataWidget: Support realtime indexing of files which are not indexed

I seem to have forgotten to push this.

BUG: 332065